// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render LoadingComponent correctly with given inverted and content props 1`] = `
<Dimmer
  active={true}
  inverted={false}
>
  <Loader
    content="Loading stuff"
  />
</Dimmer>
`;

exports[`Should render LoadingComponent with inverted as true and no content without any given props 1`] = `
<Dimmer
  active={true}
  inverted={true}
>
  <Loader />
</Dimmer>
`;
